# uetools

./: .gitignore  main.py  pyproject.toml  requirements.txt
.private/: build_exe.bat
_testing/: 01_tk_select_sub_folders.py
modules/: FolderCleanerClass.py  PluginVersionFixerClass.py  ToolConfigClass.py  config.ini  functions.py  globals.py
